add bootstrap elements

--- a/index.html
+++ b/index.html
@@ -24,9 +24,21 @@
       </p>
     </header>
     <main class="col-12 col-lg-9">
-      <div class="m-5">
-        <h2>To Do</h2>
-        <ul id="list-toDo" class="list-group"> </ul>
+      <div class="m-5 row justify-content-around">
+        <!--toDo starts-->
+        <div class="col">
+          <h2>To Do</h2>
+          <ul id="list-toDo" class="list-group"></ul>
+        </div>
+        <!--toDo ends-->
+        <div class="col">
+          <h2>In Progress</h2>
+          <ul id="list-inProgress" class="list-group"> 
+            <li class="list-group-item">
+              <span class></span>
+            </li>
+          </ul>
+        </div>
       </div>
     </main>
   </div>
