--- a/index.html
+++ b/index.html
@@ -25,20 +25,45 @@
     </header>
     <main class="col-12 col-lg-9">
       <div class="m-5 row justify-content-around">
-        <!--toDo starts-->
+        <!-- todo start -->
         <div class="col">
           <h2>To Do</h2>
           <ul id="list-toDo" class="list-group"></ul>
         </div>
-        <!--toDo ends-->
+        <!-- todo end -->
+        <!-- in progress start -->
         <div class="col">
           <h2>In Progress</h2>
-          <ul id="list-inProgress" class="list-group"> 
+          <ul id="list-inProgress" class="list-group">
             <li class="list-group-item">
-              <span class></span>
+              <span class="badge badge-primary badge-pill">05/28/2020</span>
+              <p class="m-1">Sample task in progress</p>
             </li>
           </ul>
         </div>
+        <!-- in progress end -->
+        <!-- in review start -->
+        <div class="col">
+          <h2>In Review</h2>
+          <ul id="list-inReview" class="list-group">
+            <li class="list-group-item">
+              <span class="badge badge-primary badge-pill">05/28/2020</span>
+              <p class="m-1">Sample task in review</p>
+            </li>
+          </ul>
+        </div>
+        <!-- in review end -->
+        <!-- done start -->
+        <div class="col">
+          <h2>Done</h2>
+          <ul id="list-done" class="list-group">
+            <li class="list-group-item">
+              <span class="badge badge-primary badge-pill">05/28/2020</span>
+              <p class="m-1">Sample task that's done</p>
+            </li>
+          </ul>
+        </div>
+        <!-- done end -->
       </div>
     </main>
   </div>
