--- a/index.html
+++ b/index.html
@@ -18,28 +18,53 @@
       <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal">Add
         Task</button>
       <button id="remove-tasks" class="btn btn-block btn-danger">Delete All Tasks</button>
-      <p class="mt-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas architecto ipsa
-        excepturi aut non
+      <p class="mt-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas architecto ipsa excepturi aut non
         laudantium sequi fugit officiis optio deleniti asperiores rem eius laborum maxime blanditiis culpa, quis iste?
       </p>
     </header>
-    <main class="col-12 col-lg-9">
-      <div class="m-5 row justify-content-around">
-        <!--toDo starts-->
-        <div class="col">
-          <h2>To Do</h2>
-          <ul id="list-toDo" class="list-group"></ul>
+      <main class="col-12 col-lg-9">
+        <div class="m-5 row justify-content-around">
+          <!-- todo start -->
+          <div class="col">
+            <h2>To Do</h2>
+            <ul id="list-toDo" class="list-group"></ul>
+          </div>
+          <!-- todo end -->
+          <!-- in progress start -->
+          <div class="col">
+            <h2>In Progress</h2>
+            <ul id="list-inProgress" class="list-group">
+              <li class="list-group-item">
+                <span class="badge badge-primary badge-pill">05/28/2020</span>
+                <p class="m-1">Sample task in progress</p>
+              </li>
+            </ul>
+          </div>
+          <!-- in progress end -->
+          <!-- in review start -->
+          <div class="col">
+            <h2>In Review</h2>
+            <ul id="list-inReview" class="list-group">
+              <li class="list-group-item">
+                <span class="badge badge-primary badge-pill">05/28/2020</span>
+                <p class="m-1">Sample task in review</p>
+              </li>
+            </ul>
+          </div>
+          <!-- in review end -->
+          <!-- done start -->
+          <div class="col">
+            <h2>Done</h2>
+            <ul id="list-done" class="list-group">
+              <li class="list-group-item">
+                <span class="badge badge-primary badge-pill">05/28/2020</span>
+                <p class="m-1">Sample task that's done</p>
+              </li>
+            </ul>
+          </div>
+          <!-- done end -->
         </div>
-        <!--toDo ends-->
-        <div class="col">
-          <h2>In Progress</h2>
-          <ul id="list-inProgress" class="list-group"> 
-            <li class="list-group-item">
-              <span class></span>
-            </li>
-          </ul>
-        </div>
-      </div>
+
     </main>
   </div>
 
