--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <!-- done end -->
       </div>
 
-      <div class="trash mt-auto">
-          <div class="w-100 bg-danger p-3 text-center text-light display-4">
+      <div id="trash" class="trash mt-auto">
+          <div  class="w-100 bg-danger p-3 text-center text-light display-4">
               Drop Here to remove
           </div>
       </div>
@@ -112,8 +112,9 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <!-- add the js file here -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+  <!-- add touch punch here -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="./assets/js/script.js"></script>
